// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown[Base] should render correctly  1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Click me
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about absolute 1`] = `
<div
  style="background: rgb(238, 238, 238); padding: 20px; border-radius: 4px; overflow: hidden;"
>
  <div
    class="soui-dropdown soui-dropdown-wrapper"
    data-position="bottom-left"
    data-role="dropdown"
  >
    <button
      class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-outline"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-dropdown-content"
      >
        Absolute
      </span>
      <span
        class="soui-dropdown-caret"
        data-role="caret"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="soui-dropdown soui-dropdown-wrapper"
    data-position="bottom-left"
    data-role="dropdown"
    style="margin-inline-start: 24px;"
  >
    <button
      class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-outline"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-dropdown-content"
      >
        Default
      </span>
      <span
        class="soui-dropdown-caret"
        data-role="caret"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about button 1`] = `
<div
  style="display: flex; gap: 24px;"
>
  <div
    style="display: flex; flex-direction: column; align-items: flex-start; gap: 24px;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-primary soui-button-button"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-danger soui-button-button"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-warning soui-button-button"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-success soui-button-button"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; flex-direction: column; align-items: flex-start; gap: 24px;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-outline"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-outline"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-danger soui-button-button soui-button-outline"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-warning soui-button-button soui-button-outline"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-success soui-button-button soui-button-outline"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; flex-direction: column; align-items: flex-start; gap: 24px;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-danger soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-warning soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-success soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about children 1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Click me
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about columns 1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Tiling Menu
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about divider 1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Dividing Line
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about group 1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Group Menu
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about hover 1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Click me
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about icon 1`] = `
<div
  class="soui-dropdown soui-dropdown-wrapper"
  data-position="bottom-left"
  data-role="dropdown"
>
  <button
    class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-dropdown-content"
    >
      Icon Menu
    </span>
    <span
      class="soui-dropdown-caret"
      data-role="caret"
      dir="ltr"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about position 1`] = `
<div
  style="display: inline-flex; flex-direction: column; gap: 12px;"
>
  <div
    style="display: flex; justify-content: center; gap: 12px; padding: 0px 120px;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Bottom left
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Bottom
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="bottom-right"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Bottom right
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="right-top"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Right Top
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="left-top"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="soui-dropdown-content"
        >
          Left Top
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="right"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Right
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="soui-dropdown-content"
        >
          Left
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="right-bottom"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Right Bottom
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="left-bottom"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="soui-dropdown-content"
        >
          Left Bottom
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: center; gap: 12px;"
  >
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="top-left"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Top Left
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="top"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Top
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="soui-dropdown soui-dropdown-wrapper"
      data-position="top-right"
      data-role="dropdown"
    >
      <button
        class="soui-dropdown-button soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-dropdown-content"
        >
          Top right
        </span>
        <span
          class="soui-dropdown-caret"
          data-role="caret"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-dropdown soui-dropdown-wrapper"
    data-position="bottom-left"
    data-role="dropdown"
    style="margin-inline-end: 24px;"
  >
    <button
      class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-outline soui-button-small"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-dropdown-content"
      >
        Dropdown
      </span>
      <span
        class="soui-dropdown-caret"
        data-role="caret"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="soui-dropdown soui-dropdown-wrapper"
    data-position="bottom-left"
    data-role="dropdown"
    style="margin-inline-end: 24px;"
  >
    <button
      class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-outline"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-dropdown-content"
      >
        Dropdown
      </span>
      <span
        class="soui-dropdown-caret"
        data-role="caret"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="soui-dropdown soui-dropdown-wrapper"
    data-position="bottom-left"
    data-role="dropdown"
    style="margin-inline-end: 24px;"
  >
    <button
      class="soui-dropdown-button soui-button soui-button-primary soui-button-button soui-button-outline soui-button-large"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-dropdown-content"
      >
        Dropdown
      </span>
      <span
        class="soui-dropdown-caret"
        data-role="caret"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about split 1`] = `
<div
  class="soui-button-group"
  dir="ltr"
  style="margin-inline-end: 24px;"
>
  <button
    class="soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <span>
      Option
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button soui-button-outline"
    dir="ltr"
    type="button"
  >
    <span>
      Option
    </span>
  </button>
  <div
    class="soui-dropdown soui-dropdown-wrapper"
    data-position="bottom-right"
    data-role="dropdown"
  >
    <button
      class="soui-dropdown-button soui-dropdown-split-button soui-button soui-button-secondary soui-button-button soui-button-outline"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-dropdown-caret"
        data-role="caret"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
